# sw

./: .gitignore  CMakeLists.txt  config.h  config_file.cpp  config_path.cpp  main.cpp  readme.md  sw.code-workspace  sw.cpp  sw.h  vcpkg.json
csharp/: ConfigFile.cs  Program.cs  Sw.cs  csharp.sln  sw.sln  test.ini
csharp/src/Sw/: Sw.cs
csharp/src/Sw.Cli/: Sw.Cli.csproj  test.ini
csharp/src/sw/: Program.cs  Sw.cs
csharp/tests/Sw.tests/: TestData.cs  UnitTest.cs  tests.csproj
exe/: CMakeLists.txt  main.cpp
rust/sw/: Cargo.toml
rust/sw/src/: main.rs
swlib/: CMakeLists.txt  config_path.cpp  config_path_unix.cpp  config_path_win.cpp  sw.cpp  sw.h
tests/: CMakeLists.txt  testdata.cpp  testdata.h  tests.cpp
tests/data/: bad.ini  good.ini
